--- a/css/style.css
+++ b/css/style.css
@@ -83,7 +83,8 @@
      margin: 0;
      text-align: left;
      font: 400 .95rem/1.3rem 'Roboto Condensed', tahoma, sans-serif;
-     padding: .25rem .25rem
+     padding: .25rem .25rem;
+     color: white;
  }
  
  .what h2 {
